--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ li {
 
 .signupcontainer {
     background-color: #fff;
+    margin: 0 auto;
     padding: 0 30px;
 }
 
@@ -178,7 +179,7 @@ li {
     align-items: center;
     background-color: #3882f6;
     color: #e5e7eb;
-    margin: 80px auto;
+    margin: 80px auto 0;
     border-radius: 8px;
     padding: 30px 5%;
 }
@@ -206,6 +207,16 @@ li {
     background-color: #3882f6;
     color: #e5e7eb;
     cursor: pointer;
+}
+
+.signupteam {
+    width: 100%;
+    margin: 80px 0;
+    text-align: center;
+}
+
+.signupteam img {
+    width: 70%;
 }
 
 
